# superyml

./: .gitignore  README.md  pyproject.toml
superform/: cli.py  core.py
superform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
superyml/: cli.py  core.py
