[project]
name = "superform"
version = "0.1.3"
description = "CLI tool to validate and auto-fix structured files recursively."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "superform contributors" }]
license = "MIT"
dependencies = [
  "ruamel.yaml>=0.18.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
superform = "superform.cli:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["superform*"]
